[package]
name = "knock-knock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
clap = { version = "4.4.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
teloxide = "0.12.2"
tokio = { version = "1.32.0", features = ["rt", "macros", "rt-multi-thread"] }
tokio-icmp-echo = "0.4.1"
toml = "0.8.8"
xdg = "2.5.2"
